[gd_scene load_steps=6 format=3 uid="uid://cr6c5xaoupyiu"]

[ext_resource type="Script" path="res://Resources/Scripts/UI/Popups/GameOver.gd" id="1_j5ata"]
[ext_resource type="PackedScene" uid="uid://dooops83ymi5k" path="res://Resources/Scenes/position_rank.tscn" id="2_74qkn"]
[ext_resource type="FontFile" uid="uid://cukjuxejoshhx" path="res://Resources/Art/Fonts/dpcomic.regular.ttf" id="2_uko80"]
[ext_resource type="Script" path="res://Resources/Scripts/UI/HighScores.gd" id="3_8kj1a"]
[ext_resource type="Script" path="res://Resources/Scripts/UI/NameButton.gd" id="5_use0r"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j5ata")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.243137)

[node name="HighScores" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 366.0
offset_top = 146.0
offset_right = -366.0
offset_bottom = -146.0
grow_horizontal = 2
grow_vertical = 2

[node name="Positions" type="VBoxContainer" parent="HighScores"]
layout_mode = 2
offset_left = 139.0
offset_top = 63.0
offset_right = 322.0
offset_bottom = 91.0

[node name="PositionRank" parent="HighScores/Positions" instance=ExtResource("2_74qkn")]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_uko80")
theme_override_font_sizes/font_size = 31
text = "13.557: EVE
asdf
asdf
asdf
asdf
asdf
asdf"
script = ExtResource("3_8kj1a")

[node name="VBoxContainer" type="VBoxContainer" parent="HighScores"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 27.0
offset_top = 28.0
offset_right = -27.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="HighScores/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_uko80")
theme_override_font_sizes/font_size = 33
text = "Race Finished!"
horizontal_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="HighScores/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="Retry" type="Button" parent="HighScores/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_uko80")
theme_override_font_sizes/font_size = 34
text = "Retry"

[node name="MainMenu" type="Button" parent="HighScores/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_uko80")
theme_override_font_sizes/font_size = 34
text = "Main Menu"

[node name="NameEnter" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 366.0
offset_top = 146.0
offset_right = -366.0
offset_bottom = -146.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="NameEnter"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 27.0
offset_top = 28.0
offset_right = -27.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="NameEnter/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_uko80")
theme_override_font_sizes/font_size = 33
text = "Enter Your Name"
horizontal_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="NameEnter/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="NameField" type="TextEdit" parent="NameEnter"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 76.0
offset_top = 103.0
offset_right = 348.0
offset_bottom = 175.0
theme_override_fonts/font = ExtResource("2_uko80")
theme_override_font_sizes/font_size = 30

[node name="Button" type="Button" parent="NameEnter"]
layout_mode = 0
offset_left = 76.0
offset_top = 213.0
offset_right = 353.0
offset_bottom = 278.0
theme_override_fonts/font = ExtResource("2_uko80")
theme_override_font_sizes/font_size = 56
text = "Submit"
script = ExtResource("5_use0r")

[node name="Alert" type="TextEdit" parent="NameEnter"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 65.0
offset_top = 294.0
offset_right = 358.0
offset_bottom = 328.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_readonly_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_uko80")
theme_override_font_sizes/font_size = 22
text = "ERROR: Name Must Be Of Length 3"
editable = false
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false

[connection signal="pressed" from="HighScores/VBoxContainer/Buttons/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="HighScores/VBoxContainer/Buttons/MainMenu" to="." method="_on_main_menu_pressed"]
